# navi

./: .clang-format  CMakeLists.txt  LICENSE
dataset/: distortion.qoi
hertz-web/: client  client.cpp  package.json  port_forwarding.sh  server.js  test.py
hertz-web/html/: index.html  script.js  style.css
include/: lumina.hpp
include/base/: algorithm.hpp  array.hpp  base.hpp  blas.hpp  color.hpp  helpers.hpp  image.hpp  matrix.hpp  memory.hpp  shape.hpp  socket.hpp  static_tensor.hpp  tensor.hpp  tensor_view.hpp  tuple.hpp  types.hpp  vec.hpp
include/cuda/: array.cuh  blas.cuh  brief.cuh  color.cuh  cuda.cuh  cuda.hpp  error.cuh  graph.cuh  half.cuh  kernel.cuh  kernels.cuh  matrix.cuh  memory.cuh  pipeline.hpp  stream.cuh  tensor.cuh  texture.cuh
include/ecdsa/: ecdsa.cuh  knuth.cuh  sha256.cuh  u256.cuh
include/graphics/: color.hpp  image.hpp  kernel.hpp
include/neural/: blas.hpp  layer.hpp  network.hpp  node.hpp
include/slam/: brief.hpp  camera.hpp  cyclops.hpp  detect.hpp  device.hpp  fast.hpp  fast11.hpp  kernels.hpp  mpu.hpp  pointcloud.hpp  sense.hpp  slam.hpp
include/util/: log.hpp  profiler.hpp  timer.hpp  utility.hpp  zip.hpp
include/utility/: log.hpp  types.hpp  utility.hpp
resource/: include.txt
resource/predictor/: bitcoin[1282003200:1439424000].json  bitcoin[1439424000:1597104000].json  bitcoin[1597104000:1685491200].json
script/: model.onnx  onnx_gen.py  pytorch_test.py
script/python/: infer.py  sandbox.ipynb  torch.ipynb
service/: CMakeLists.txt
service/agent/: platformio.ini
service/agent/src/: main.cpp
service/benchmark/: CMakeLists.txt  main.cpp
service/dashboard/: Dockerfile  server.go
service/dashboard/app/: go.mod  index.html  main.js  package-lock.json  package.json  vite.config.js
service/dashboard/app/public/: script.js
service/predictor/: chart.csv  chart.json  main  main.cpp  makefile  prediction.csv
service/reference/: CMakeLists.txt  main.cpp
service/web/: go.sum  server.go
service/web/certs/: acme_account+key  markmakave.com
service/web/public/: index.html  script.js
src/: main.cpp  test.cpp
src/autopilot/: main.cpp
src/base/: blas.cpp  image.cpp
src/cuda/: blas.cpp  blas.cu  convolve.cu  cuda.cpp  descript.cu  detect.cu  distort.cu  test.cu
src/navi/: detect.cpp  main.cpp  main.cu
src/neural/: main.cpp
src/python/: lumina.py  main.py  model.py  pylib.cpp  setup.py
src/slam/: descript.cpp  detect.cpp  fast11.cpp  fast9.cpp
test/distortion/: distortion_test.cpp
test/distortion/vpi/: main.cpp  makefile  out.qoi  vpi_distortion
test/image/: main.cpp
test/loop/: main  main.cpp  makefile
test/mandlebrot/: main.cpp
test/neural/: infer.cpp  main.cpp  train.cpp
test/texture/: main.cu
